<resources>
    <string name="app_name">天天锻炼</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="try_login">试用者点击登陆</string>
    <string name="notice">2012/12/12 你还没有制定过任何计划</string>
    <string name="name">NAME</string>
    <string name="trial_user">试用者</string>
    <string name="please_login">请登录</string>
    <string name="bmi">BMI:21.2</string>
    <string name="myplan">我的计划</string>
    <string name="pic">图片</string>
    <string name="livehome">居家</string>
    <string name="livehomedesc">简易不简单，徒手或使用常见器材的锻炼</string>
    <string name="buildbody">健身</string>
    <string name="buildbodydesc">精心设计，专业全面的健身计划</string>
    <string name="exercisecalender">训练日历</string>
    <string name="fixplan">调整计划</string>
    <string name="office">办公室</string>
    <string name="officedesc">健康到底，针对办公室常见身体不适的锻炼方法</string>
    <string name="more">更多</string>
    <string name="moredesc">从众多的计划中选取适合自己的锻炼</string>
    <string name="exerciselib">练习库</string>
    <string name="selfplan">个性计划</string>
    <string name="selfcenter">个人中心</string>
    <string name="selfinfo">个人信息</string>
    <string name="softwareconfig">软件设置</string>
    <string name="weatherinfo">天气信息</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="account">天天锻炼账号</string>
    <string name="email_register">邮箱：</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="pwd_register">密码：</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="quick_login">快速登录</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tx_weibo">腾讯微博</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name_register">昵称：</string>
    <string name="confirm_pwd_register">确认：</string>
    <string name="hint_name">请输入昵称</string>
    <string name="hint_confirm_pwd">确认您的密码</string>
    <string name="txt_help_account">作为您的帐户，可以用来登录本软件，并可通过该邮箱取回或重置密码，并且同样做为网站的唯一标识用户。</string>
    <string name="title_activity_register_activity1">RegisterActivity1</string>
    <string name="title_activity_base_exercise">BaseExerciseActivity</string>
    <string name="base_exercise">基本练习</string>
    <string name="body_part">身体部位</string>
    <string name="exercise_kinds">练习分类</string>
    <string name="equipment">设备属性</string>
    <string name="all_exercises">所有练习</string>
    <string name="listview_item">锻炼单项</string>
    <string name="title_activity_base_exercise_list">BaseExerciseListActivity</string>
    <string name="shoulders_exercise">肩部训练</string>
    <string name="abdominals_exercise">腹部训练</string>
    <string name="back_exercise">背部训练</string>
    <string name="biceps_exercise">手部训练</string>
    <string name="chest_exercise">胸部训练</string>
    <string name="quadriceps_exercise">腿部训练</string>
    <string name="run_exercise">跑步训练</string>
    <string name="title_activity_single_exerciase">SingleExerciaseActivity</string>
    <string name="description">坐姿，双手持哑铃于上胸前，掌心向胸部。</string>
    <string name="min">分</string>
    <string name="start_exercise">开始练习</string>
    <string name="title_activity_exercise_timer">ExerciseTimerActivity</string>
    <string name="timer">00:00:00</string>
    <string name="step_1">快速跑步运动(1/1)</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="account_colon">账号：</string>
    <string name="weight_goal">目标体重</string>
    <string name="weight_goal_register">目标：</string>
    <string name="height_register">身高：</string>
    <string name="born_date">出生日期</string>
    <string name="txt_help_born_date">您的年龄帮助我们计算您的健身和营养需求。</string>
    <string name="habit">生活习惯</string>
    <string name="weight_register">体重：</string>
    <string name="UserInfoSettingActivity_friends_manager">好友管理</string>
    <string name="UserInfoSettingActivity_my_friends">我的好友</string>
    <string name="title_activity_add_diy_plan_activity_1">AddDiyPlanActivity_1</string>
    <string name="title_activity_add_diy_plan_activity_2">AddDiyPlanActivity_2</string>
    <string name="title_activity_add_diy_plan_activity_3">AddDiyPlanActivity_3</string>
    <string name="add_exercise">添加训练项目</string>
    <string name="confirm_exercise">确认训练项目</string>
    <string name="set_exercisedate">设置训练日期</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="abc">abc</string>
    <string name="period_set">训练周期设置</string>
    <string name="next">下一步</string>
    <string name="reminder_time">提醒时间</string>
    <string name="repeat">重复</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="reminder_styles">提醒方式</string>
    <string name="reminder_styles1_no">不提醒</string>
    <string name="reminder_styles2_notice">通知栏提醒</string>
    <string name="start_date">开始日期</string>
    <string name="continue_period">持续周数</string>
    <string name="plan_name">计划名称</string>
    <string name="finish_add_plan">完成</string>
    <string name="modify_name">修改名字</string>
    <string name="modify_pwd">修改密码</string>
    <string name="del_plan">删除计划</string>
    <string name="title_activity_plan_set">PlanSetActivity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
    <string name="title_activity_weather_info">WeatherInfoActivity</string>
    <string name="title_activity_homepage_activity_2">HomepageActivity_2</string>
    <string name="homepage">首页</string>
    <string name="heartbeat">心跳测试</string>
    <string name="adjust_plan">计划调整</string>
    <string name="today_plan">本日训练计划</string>
    <string name="exercise_data">训练统计</string>
    <string name="visual_image">虚拟形象</string>
    <string name="title_activity_heart_beat">HeartBeatActivity</string>
    <string name="title_activity_adjust_plan">AdjustPlanActivity</string>
    <string name="title_activity_exercise_data">ExerciseDataActivity</string>
    <string name="title_activity_visual_image">VisualImageActivity</string>
    <string name="choose_start_date">请选择训练开始日期</string>
    <string name="choose_repeat">请选择每周重复</string>
    <string name="choose_week_num">请选择持续周数</string>
    <string name="edit_plan_name">请编辑计划名称</string>
    <string name="title_activity_adjust_single_plan">AdjustSinglePlanActivity</string>
    <string name="twoeight">28</string>
    <string name="sec">秒</string>
    <string name="common_cancel">取消</string>
    <string name="common_ok">确定</string>
    <string name="title_activity_today_plan">TodayPlanActivity</string>
    <string name="day_calories">本日消耗（Cal）</string>
    <string name="day_calories_value">23.2</string>
    <string name="sum_calories">累计消耗（Cal）</string>
    <string name="sum_calories_value">3298.6</string>
    <string name="week_calories">近一周消耗（Cal）</string>
    <string name="week_calories_value">131.8</string>
    <string name="month_calories">近一月消耗（Cal）</string>
    <string name="month_calories_value">598.3</string>
    <string name="sevendays_calories">七日每日消耗（Cal）</string>
    <string name="title_activity_today_exericse">TodayExericseActivity</string>
    <string name="title_activity_today_exercise_timer">TodayExerciseTimerActivity</string>
    <string name="default_text">--</string>
    <string name="discription">请将食指覆盖住手机摄像头</string>
    <string name="weather_city">武汉</string>
    <string name="weather_temperature">12°C/16°C</string>
    <string name="weather_specific">小雨转多云</string>
    <string name="weather_wind">西北风2级</string>
    <string name="weather_index">紫外线强度：</string>
    <string name="air_quality">空气质量：</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="weibo_success">授权成功</string>
    <string name="weibo_failed">授权失败</string>
    <string name="weibo_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_canceled">分享失败</string>
    <string name="weibosdk_demo_toast_share_failed">分享取消</string>
    <string name="title_activity_sina_share">SinaShareActivity</string>
    <string name="weibosdk_demo_share_to">分享</string>
    <string name="text_default">说些什么</string>
    <string name="picture_choose">选择图片</string>
    <string name="weibosdk_demo_share_text_template">我正在用微博客户端。。。</string>
    <string name="weibosdk_demo_cancel_download_weibo">\t取消下载</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 应用分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weibosdk_demo_share_webpage_template">【%1$s】（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_music_template">我正在听 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_video_template">我正在看 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_voice_template">我分享了 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_webpage_demo">XXX 新闻</string>
    <string name="weibosdk_demo_share_music_demo">XXX 音乐</string>
    <string name="weibosdk_demo_share_video_demo">XXX 视频</string>
    <string name="weibosdk_demo_share_voice_demo">XXX 声音</string>
    <string name="weibosdk_demo_app_url">https://github.com/mobileresearch/weibo_android_sdk/blob/master/WeiboSDKDemo.apk</string>
    <string name="weibosdk_demo_share_webpage_title">分享网页</string>
    <string name="weibosdk_demo_share_webpage_desc">网页描述：XXX</string>
    <string name="weibosdk_demo_test_webpage_url">http://news.sina.com.cn/c/2013_10_22/021928494669.shtml</string>
    <string name="weibosdk_demo_share_to_weibo_title">从本应用->微博->本应用</string>
    <string name="weibosdk_demo_share_image_title">分享图片</string>
    <string name="weibosdk_demo_share_default_text">欢迎使用新浪微博 SDK</string>
    <string name="weibosdk_demo_share_text_title">分享文字</string>
    <string name="weibosdk_demo_share_music_title">分享音乐</string>
    <string name="weibosdk_demo_share_video_title">分享视频</string>
    <string name="weibosdk_demo_share_voice_title">分享声音</string>
    <string name="weibosdk_demo_share_music_desc">音乐描述：XXX</string>
    <string name="weibosdk_demo_share_video_desc">视频描述：XXX</string>
    <string name="weibosdk_demo_share_voice_desc">声音描述：XXX</string>
    <string name="weibosdk_demo_test_music_url">http://music.sina.com.cn/yueku/i/2850305.html</string>
    <string name="weibosdk_demo_test_video_url">http://video.sina.com.cn/p/sports/cba/v/2013_10_22/144463050817.html</string>
    <string name="weibosdk_demo_test_voice_url">http://music.sina.com.cn/yueku/i/2850305.html</string>
    <string name="title_activity_share_choose">ShareChooseActivity</string>
    <string name="shareChoose">选择分享</string>
    <string name="ChooseSina">新浪微博</string>
    <string name="ChooseTX">腾讯微博</string>
    <string name="upload">备份</string>
    <string name="download">同步</string>
    <string name="cloudShare">云备份</string>
    <string name="title_activity_software_config">SoftwareConfigActivity</string>
    <string name="aboutUs">关于我们</string>
    <string name="help">帮助</string>
    <string name="esc">退出</string>
    <string name="title_activity_static_plan_list">StaticPlanListActivity</string>
	<string name="bodytest">身体状况</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="hint_height">请输入身高:***cm</string>
    <string name="hint_weight">请输入体重:**kg</string>
    <string name="hint_age">请输入年龄:**岁</string>
    <string name="txt_help_bodytest">通过记录您的身体参数，可以测试您的健康状况，并可通过数据分析，推荐适合您的锻炼方法。</string>
</resources>