<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffdff7df"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout android:id="@+id/tblTitle" android:background="@drawable/top_back_ground" android:layout_width="fill_parent" android:layout_height="44.0dip">
        <ImageView android:layout_width="@dimen/mini_btn_size" android:layout_height="@dimen/mini_btn_size" android:layout_marginLeft="7.0dip" android:src="@drawable/icon_back" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@string/pic"/>
        <Button android:id="@+id/btnPrev" android:background="@drawable/topbar_minibtn_bg_selector" android:layout_width="43.0dip" android:layout_height="44.0dip" android:layout_centerVertical="true"  />
        <TextView android:textSize="@dimen/topbar_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bodytest" android:layout_centerInParent="true" />
    </RelativeLayout>    
    <TableLayout android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:stretchColumns="1">
        <TableRow>
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_vertical" android:text="@string/height" />
            <EditText android:textColor="#ff000000" android:id="@+id/editHeight" android:background="@drawable/widget_et" android:layout_width="fill_parent" android:layout_margin="6.0dip" android:hint="@string/hint_height" android:singleLine="true" android:layout_weight="1.0" android:inputType="number" />
        </TableRow>
        <ImageView android:background="@drawable/panel_deliver" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/pic" />
        <TableRow>
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_vertical" android:text="@string/weight" />
            <EditText android:textColor="#ff000000" android:id="@+id/editWeight" android:background="@drawable/widget_et" android:layout_width="fill_parent" android:layout_margin="6.0dip" android:hint="@string/hint_weight" android:singleLine="true" android:inputType="number" />
        </TableRow>
        <ImageView android:background="@drawable/panel_deliver" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/pic" />
        <TableRow>
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_vertical" android:text="@string/age" />
            <EditText android:textColor="#ff000000" android:id="@+id/editAge" android:background="@drawable/widget_et" android:layout_width="fill_parent" android:layout_margin="6.0dip" android:hint="@string/hint_age" android:singleLine="true"  android:inputType="number" />
        </TableRow>
        <ImageView android:background="@drawable/panel_deliver" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/pic" />
        <TableRow>
            <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_vertical" android:text="@string/sex" />
            <RadioGroup android:id="@+id/radioGroup_sex" android:contentDescription="@string/sex" android:layout_width="wrap_content" android:layout_height="wrap_content">
   			 	 <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioMale" android:text="@string/male" android:checked="true"></RadioButton>
    			 <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioFemale" android:text="@string/female"></RadioButton>    
 		 	</RadioGroup>
<!--  		
            <EditText android:textColor="#ff000000" android:id="@+id/chooseSex" android:background="@drawable/widget_et" android:layout_width="fill_parent" android:layout_margin="6.0dip" android:hint="@string/hint_sex" android:singleLine="true"  android:inputType="text" />
-->
            </TableRow>
    </TableLayout>
    <TextView android:text="@string/txt_help_bodytest" style="@style/reg_notice_text_style" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
    <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@+id/btnNextStep" android:background="@drawable/button_green_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/next_step" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
