<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffdff7df" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/tblTitle" android:background="@drawable/top_back_ground" android:layout_width="fill_parent" android:layout_height="44.0dip">
        <RelativeLayout android:id="@id/top_left_bg" android:background="@drawable/topbar_minibtn_bg_selector" android:layout_width="44.0dip" android:layout_height="44.0dip">
            <ImageView android:id="@id/iv_top_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_back" android:layout_centerInParent="true" android:contentDescription="@string/pic"/>
        </RelativeLayout>
        <TextView android:textSize="@dimen/topbar_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/tv_top_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cloudShare" android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout android:background="@drawable/exer_choose_list_item_selector_two" android:layout_width="fill_parent" android:layout_height="@dimen/list_height" android:id="@+id/cloudupload">
        
        <ImageView android:background="#ff9dc19d" android:layout_width="fill_parent" android:layout_height="0.6600001dip" android:layout_alignParentBottom="true" android:contentDescription="@string/pic"/>
        
        <TextView android:layout_marginLeft="10dip" android:textSize="18.0sp" android:textColor="@color/black"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload" android:layout_centerVertical="true" />
        
    </RelativeLayout>
	<RelativeLayout android:background="@drawable/exer_choose_list_item_selector_two" android:layout_width="fill_parent" android:layout_height="@dimen/list_height" android:id="@+id/clouddownload">
        
        <ImageView android:background="#ff9dc19d" android:layout_width="fill_parent" android:layout_height="0.6600001dip" android:layout_alignParentBottom="true" android:contentDescription="@string/pic"/>
        
        <TextView android:layout_marginLeft="10dip" android:textSize="18.0sp" android:textColor="@color/black"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download" android:layout_centerVertical="true" />
        
    </RelativeLayout>
   
</LinearLayout>