<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/exer_choose_list_item_selector_one" android:layout_width="fill_parent" android:layout_height="70.0dip" xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:contentDescription="@string/pic" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="0.6600001dip" />
    <ImageView android:contentDescription="@string/pic" android:background="@color/list_item_gradient_color" android:layout_width="fill_parent" android:layout_height="0.6600001dip" android:layout_alignParentBottom="true" />
    <ImageView android:contentDescription="@string/pic" android:id="@+id/lv_left_image" android:layout_width="42.0dip" android:layout_height="42.0dip" android:layout_marginLeft="11.0dip" android:src="@drawable/common_list_row_left_icon" android:layout_centerVertical="true" />
    <ImageView android:id="@+id/plan_img" android:contentDescription="@string/pic" android:layout_width="44.0dip" android:layout_height="44.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/img_large_frame" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="vertical" android:id="@+id/lv_desc_layout" android:layout_toLeftOf="@+id/lv_right_arrow" android:layout_toRightOf="@id/lv_left_image" style="@style/main_row_ly">
        <TextView android:textSize="18.0sp" android:typeface="sans" android:textColor="#ff1d1d1d" android:id="@+id/lv_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/myplan" />
        <TextView android:textSize="14.0sp" android:textColor="@color/color_66" android:id="@+id/lv_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description" />
    </LinearLayout>
    <ImageView android:contentDescription="@string/pic" android:id="@+id/lv_right_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dimen_10_dip" android:src="@drawable/common_list_row_right_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
</RelativeLayout>

