<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffdff7df" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	 <RelativeLayout android:background="@drawable/top_back_ground" android:layout_width="fill_parent" android:layout_height="44.0dip">
	 	<Button android:id="@+id/add_diy_plan_1_back" android:background="@drawable/topbar_minibtn_bg_selector" android:layout_width="43.0dip" android:layout_height="44.0dip" android:layout_centerVertical="true" />
        <ImageView android:layout_width="@dimen/mini_btn_size" android:layout_height="@dimen/mini_btn_size" android:layout_marginLeft="7.0dip" android:src="@drawable/icon_back" android:scaleType="center" android:layout_centerVertical="true" android:contentDescription="@string/pic"/>
        <FrameLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_centerInParent="true">
            <TextView android:textSize="20.0sp" android:textColor="#44111111" android:layout_gravity="center_vertical" android:id="@+id/add_diy_plan_1_txtTopShadow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_exercise" />
            <TextView android:textSize="@dimen/topbar_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:id="@+id/add_diy_plan_1_txtBase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/add_exercise" />
        </FrameLayout>
	 </RelativeLayout>
	 <LinearLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="@dimen/divider_line">
	 	<ImageView android:background="#ff115622" android:layout_width="fill_parent" android:layout_height="@dimen/divider_line_half" android:contentDescription="@string/pic"/>
	 </LinearLayout>
	 <ExpandableListView android:id="@+id/add_diy_plan_1_baseList" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1" android:divider="@null" />
     <Button android:id="@+id/add_diy_plan_1_btnNextStep"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/button_green_selector"
            android:text="@string/next_step"
            android:textColor="#ffffffff"
            android:textSize="18.0sp" 
            android:layout_marginBottom="2dip"
            />

</LinearLayout>